PA3/cool.output
Terminals unused in grammar

   ERROR


State 144 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID error TYPEID '{' feature_list '}' ';'

    7 feature_list: feature_list feature ';'
    8             | /* empty */

    9 feature: OBJECTID ':' TYPEID
   10        | OBJECTID ':' TYPEID ASSIGN exp
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' exp '}'
   12        | error ':' TYPEID
   13        | error ':' TYPEID ASSIGN exp
   14        | error '(' formal_list ')' ':' TYPEID '{' exp '}'

   15 formal_list: /* empty */
   16            | formal
   17            | formal_list ',' formal

   18 formal: OBJECTID ':' TYPEID

   19 exp: OBJECTID ASSIGN exp
   20    | exp '.' OBJECTID '(' exp_list_colon ')'
   21    | exp '@' TYPEID '.' OBJECTID '(' exp_list_colon ')'
   22    | OBJECTID '(' exp_list_colon ')'
   23    | IF exp THEN exp ELSE exp FI
   24    | WHILE exp LOOP exp POOL
   25    | WHILE exp error exp POOL
   26    | WHILE exp LOOP exp error
   27    | '{' exp_list_semi '}'
   28    | CASE exp OF case_list ESAC
   29    | NEW TYPEID
   30    | ISVOID exp
   31    | exp '+' exp
   32    | exp '-' exp
   33    | exp '*' exp
   34    | exp '/' exp
   35    | exp '<' exp
   36    | exp '=' exp
   37    | exp LE exp
   38    | '~' exp
   39    | NOT exp
   40    | '(' exp ')'
   41    | OBJECTID
   42    | INT_CONST
   43    | STR_CONST
   44    | BOOL_CONST
   45    | let
   46    | error

   47 let: LET OBJECTID ':' TYPEID let_sub_exp
   48    | LET OBJECTID ':' TYPEID ASSIGN exp let_sub_exp

   49 let_sub_exp: IN exp
   50            | ',' OBJECTID ':' TYPEID let_sub_exp
   51            | ',' OBJECTID ':' TYPEID ASSIGN exp let_sub_exp

   52 single_case: OBJECTID ':' TYPEID DARROW exp ';'

   53 case_list: single_case
   54          | case_list single_case

   55 exp_list_colon: /* empty */
   56               | exp
   57               | exp_list_colon ',' exp

   58 exp_list_semi: exp ';'
   59              | exp_list_semi exp ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 14 20 21 22 40
')' (41) 11 14 20 21 22 40
'*' (42) 33
'+' (43) 31
',' (44) 17 50 51 57
'-' (45) 32
'.' (46) 20 21
'/' (47) 34
':' (58) 9 10 11 12 13 14 18 47 48 50 51 52
';' (59) 4 5 6 7 52 58 59
'<' (60) 35
'=' (61) 36
'@' (64) 21
'{' (123) 4 5 6 11 14 27
'}' (125) 4 5 6 11 14 27
'~' (126) 38
error (256) 6 12 13 14 25 26 46
CLASS (258) 4 5 6
ELSE (259) 23
FI (260) 23
IF (261) 23
IN (262) 49
INHERITS (263) 5
LET (264) 47 48
LOOP (265) 24 26
POOL (266) 24 25
THEN (267) 23
WHILE (268) 24 25 26
CASE (269) 28
ESAC (270) 28
OF (271) 28
DARROW (272) 52
NEW (273) 29
ISVOID (274) 30
STR_CONST (275) 43
INT_CONST (276) 42
BOOL_CONST (277) 44
TYPEID (278) 4 5 6 9 10 11 12 13 14 18 21 29 47 48 50 51 52
OBJECTID (279) 9 10 11 18 19 20 21 22 41 47 48 50 51 52
ASSIGN (280) 10 13 19 48 51
NOT (281) 39
LE (282) 37
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5 6 7
feature (50)
    on left: 9 10 11 12 13 14, on right: 7
formal_list (51)
    on left: 15 16 17, on right: 11 14 17
formal (52)
    on left: 18, on right: 16 17
exp (53)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46, on right: 10 11 13 14 19 20 21 23
    24 25 26 28 30 31 32 33 34 35 36 37 38 39 40 48 49 51 52 56 57
    58 59
let (54)
    on left: 47 48, on right: 45
let_sub_exp (55)
    on left: 49 50 51, on right: 47 48 50 51
single_case (56)
    on left: 52, on right: 53 54
case_list (57)
    on left: 53 54, on right: 28 54
exp_list_colon (58)
    on left: 55 56 57, on right: 20 21 22 57
exp_list_semi (59)
    on left: 58 59, on right: 27 59


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID error TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID . error TYPEID '{' feature_list '}' ';'

    error     shift, and go to state 8
    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    6 class: CLASS TYPEID error . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


state 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 13


state 11

    6 class: CLASS TYPEID error TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


state 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


state 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


state 14

    6 class: CLASS TYPEID error TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 20


state 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 21


state 16

   12 feature: error . ':' TYPEID
   13        | error . ':' TYPEID ASSIGN exp
   14        | error . '(' formal_list ')' ':' TYPEID '{' exp '}'

    ':'  shift, and go to state 22
    '('  shift, and go to state 23


state 17

    9 feature: OBJECTID . ':' TYPEID
   10        | OBJECTID . ':' TYPEID ASSIGN exp
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' exp '}'

    ':'  shift, and go to state 24
    '('  shift, and go to state 25


state 18

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


state 19

    7 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 27


state 20

    6 class: CLASS TYPEID error TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 28

    feature  go to state 19


state 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 29

    feature  go to state 19


state 22

   12 feature: error ':' . TYPEID
   13        | error ':' . TYPEID ASSIGN exp

    TYPEID  shift, and go to state 30


state 23

   14 feature: error '(' . formal_list ')' ':' TYPEID '{' exp '}'

    OBJECTID  shift, and go to state 31

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 32
    formal       go to state 33


state 24

    9 feature: OBJECTID ':' . TYPEID
   10        | OBJECTID ':' . TYPEID ASSIGN exp

    TYPEID  shift, and go to state 34


state 25

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' exp '}'

    OBJECTID  shift, and go to state 31

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 35
    formal       go to state 33


state 26

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 27

    7 feature_list: feature_list feature ';' .

    $default  reduce using rule 7 (feature_list)


state 28

    6 class: CLASS TYPEID error TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 36


state 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 37


state 30

   12 feature: error ':' TYPEID .
   13        | error ':' TYPEID . ASSIGN exp

    ASSIGN  shift, and go to state 38

    $default  reduce using rule 12 (feature)


state 31

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 39


state 32

   14 feature: error '(' formal_list . ')' ':' TYPEID '{' exp '}'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 40
    ','  shift, and go to state 41


state 33

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


state 34

    9 feature: OBJECTID ':' TYPEID .
   10        | OBJECTID ':' TYPEID . ASSIGN exp

    ASSIGN  shift, and go to state 42

    $default  reduce using rule 9 (feature)


state 35

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' exp '}'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 43
    ','  shift, and go to state 41


state 36

    6 class: CLASS TYPEID error TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 38

   13 feature: error ':' TYPEID ASSIGN . exp

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 59
    let  go to state 60


state 39

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 61


state 40

   14 feature: error '(' formal_list ')' . ':' TYPEID '{' exp '}'

    ':'  shift, and go to state 62


state 41

   17 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 31

    formal  go to state 63


state 42

   10 feature: OBJECTID ':' TYPEID ASSIGN . exp

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 64
    let  go to state 60


state 43

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' exp '}'

    ':'  shift, and go to state 65


state 44

   46 exp: error .

    $default  reduce using rule 46 (exp)


state 45

   23 exp: IF . exp THEN exp ELSE exp FI

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 66
    let  go to state 60


state 46

   47 let: LET . OBJECTID ':' TYPEID let_sub_exp
   48    | LET . OBJECTID ':' TYPEID ASSIGN exp let_sub_exp

    OBJECTID  shift, and go to state 67


state 47

   24 exp: WHILE . exp LOOP exp POOL
   25    | WHILE . exp error exp POOL
   26    | WHILE . exp LOOP exp error

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 68
    let  go to state 60


state 48

   28 exp: CASE . exp OF case_list ESAC

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 69
    let  go to state 60


state 49

   29 exp: NEW . TYPEID

    TYPEID  shift, and go to state 70


state 50

   30 exp: ISVOID . exp

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 71
    let  go to state 60


state 51

   43 exp: STR_CONST .

    $default  reduce using rule 43 (exp)


state 52

   42 exp: INT_CONST .

    $default  reduce using rule 42 (exp)


state 53

   44 exp: BOOL_CONST .

    $default  reduce using rule 44 (exp)


state 54

   19 exp: OBJECTID . ASSIGN exp
   22    | OBJECTID . '(' exp_list_colon ')'
   41    | OBJECTID .

    ASSIGN  shift, and go to state 72
    '('     shift, and go to state 73

    $default  reduce using rule 41 (exp)


state 55

   39 exp: NOT . exp

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 74
    let  go to state 60


state 56

   38 exp: '~' . exp

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 75
    let  go to state 60


state 57

   27 exp: '{' . exp_list_semi '}'

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp            go to state 76
    let            go to state 60
    exp_list_semi  go to state 77


state 58

   40 exp: '(' . exp ')'

    error       shift, and go to state 44
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    exp  go to state 78
    let  go to state 60


state 59

   13 feature: error ':' TYPEID ASSIGN exp .
   20 exp: exp . '.' OBJECTID '(' exp_list_colon ')'
   21    | exp . '@' TYPEID '.' OBJECTID '(' exp_list_colon ')'
   31    | exp . '+' exp
   32    | exp . '-' exp
   33    | exp . '*' exp
   34    | exp . '/' exp
   35    | exp . '<' exp
   36    | exp . '=' exp
   37    | exp . LE exp

    LE   shift, and go to state 79
    '<'  shift, and go to state 80
    '='  shift, and go to state 81
    '-'  shift, and go to state 82
    '+'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '@'  shift, and go to state 86
    '.'  shift, and go to state 87

    $default  reduce using rule 13 (feature)


state 60

   45 exp: let .

    $default  reduce using rule 45 (exp)


state 61

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 62

   14 feature: error '(' formal_list ')' ':' . TYPEID '{' exp '}'

    TYPEID  shift, and go to state 88


state 63

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


state 64

   10 feature: OBJECTID ':' TYPEID ASSIGN exp .
   20 exp: exp . '.' OBJECTID '(' exp_list_colon ')'
   21    | exp . '@' TYPEID '.' OBJECTID '(' exp_list_colon ')'
   31    | exp . '+' exp
   32    | exp . '-' exp
   33    | exp . '*' exp
   34    | exp . '/' exp
   35    | exp . '<' exp
   36    | exp . '=' exp
   37    | exp . LE exp

    LE   shift, and go to state 79
    '<'  shift, and go to state 80
    '='  shift, and go to state 81
    '-'  shift, and go to state 82
    '+'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '@'  shift, and go to state 86
    '.'  shift, and go to state 87

    $default  reduce using rule 10 (feature)


state 65

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' exp '}'

    TYPEID  shift, and go to state 89


state 66

   20 exp: exp . '.' OBJECTID '(' exp_list_colon ')'
   21    | exp . '@' TYPEID '.' OBJECTID '(' exp_list_colon ')'
   23    | IF exp . THEN exp ELSE exp FI
   31    | exp . '+' exp
   32    | exp . '-' exp
   33    | exp . '*' exp
   34    | exp . '/' exp
   35    | exp . '<' exp
   36    | exp . '=' exp
   37    | exp . LE exp

    THEN  shift, and go to state 90
    LE    shift, and go to state 79
    '<'   shift, and go to state 80
    '='   shift, and go to state 81
    '-'   shift, and go to state 82
    '+'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    '@'   shift, and go to state 86
    '.'   shift, and go to state 87


state 67

   47 let: LET OBJECTID . ':' TYPEID let_sub_exp
   48    | LET OBJECTID . ':' TYPEID ASSIGN exp let_sub_exp

    ':'  shift, and go to state 91


state 68

   20 exp: exp . '.' OBJECTID '(' exp_list_colon ')'
   21    | exp . '@' TYPEID '.' OBJECTID '(' exp_list_colon ')'
   24    | WHILE exp . LOOP exp POOL
   25    | WHILE exp . error exp POOL
   26    | WHILE exp . LOOP exp error
   31    | exp . '+' exp
   32    | exp . '-' exp
   33    | exp . '*' exp
   34    | exp . '/' exp
   35    | exp . '<' exp
   36    | exp . '=' exp
   37    | exp . LE exp
